# foldindent

./: .gitlab-ci.yml  README.md  foldindent.py  setup.cfg  tuifold.py
foldindent/: foldindent.py
samples/: example-py-ast.txt  example.py
tests/: test_parse.py  test_ui.py
