[metadata]
name = foldindent
version = 0.2.0
description = foldindent - indented text viewer with folding
long_description = file: README.md
keywords = indentation, text
url = https://gitlab.com/hydrargyrum/foldindent

license = WTFPL
author = Hg
author_email = dev@indigo.re

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Public Domain
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = 1
python_requires = >=3
install_requires = textual
packages = find:

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120

[options.entry_points]
console_scripts =
    foldindent = foldindent:main
